Add KlasCement log in button on log in page

--- a/sourcecode/hub/.env.example
+++ b/sourcecode/hub/.env.example
@@ -61,6 +61,10 @@ FACEBOOK_CLIENT_SECRET=
 
 AUTH0_CLIENT_ID=
 AUTH0_CLIENT_SECRET=
+
+KLASCEMENT_CLIENT_ID=
+KLASCEMENT_CLIENT_SECRET=
+
 # e.g. https://dev--abcdef.eu.auth0.com - must not end in a slash
 AUTH0_BASE_URL=
 
