--- a/sourcecode/hub/composer.json
+++ b/sourcecode/hub/composer.json
@@ -21,6 +21,8 @@
         "predis/predis": "^2.3.0",
         "psr/clock": "^1.0",
         "socialiteproviders/auth0": "^4.2",
+        "socialiteproviders/generators": "^4.7",
+        "socialiteproviders/klascement": "^1.0",
         "socialiteproviders/manager": "^4.7.0",
         "spatie/laravel-fractal": "^6.2.1",
         "symfony/cache": "^7.1.9",
@@ -43,7 +45,8 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Seeders\\": "database/seeders/",
+            "SocialiteProviders\\KlasCement\\": "SocialiteProviders/src/KlasCement/"
         }
     },
     "autoload-dev": {
@@ -76,5 +79,11 @@
         }
     },
     "minimum-stability": "stable",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "repositories": [
+        {
+            "type": "path",
+            "url": "./SocialiteProviders/src/KlasCement"
+        }
+    ]
 }
